[package]
name = "lua-vfs"
version = "0.1.0"
authors = ["Tom Sputz <tomsputz@outlook.com>"]
edition = "2018"

[dependencies]
structopt = { version = "0.2.18", features = [ "paw" ] }
paw = "1.0"
luatools = { path = "luatools" }
serde = { version = "1.0.94", features = ["derive"] }
serde_json = "1.0.40"
rlua = "0.16.3"
duct = "0.12.0"
os_pipe = "0.8.1"
which = "2.0.1"
regex = "1.1.8"
mustache = "0.9.0"
path-clean = "0.1.0"