[package]
name = "lua-vfs"
version = "0.1.0"
authors = ["Tom Sputz <tomsputz@outlook.com>"]
edition = "2018"

[dependencies]
structopt = { version = "0.2.18", features = [ "paw" ] }
paw = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
which = "3.1.0"
failure = "0.1.5"
exitfailure = "0.5.1"
rlua_serde = "0.3"
error = "*"
assert_cmd = "0.11.1"
tempfile = "3.1"